--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
       <!-- Acrylic Social Bar -->
       <div class="social-bar">
-        <a class="social" href="#" aria-label="Instagram">
+        <a class="social" href="https://www.instagram.com/adevnameddell" target="_blank" aria-label="Instagram">
           <img src="assets/instagram.png" alt="Instagram icon">
         </a>
-        <a class="social" href="#" aria-label="X / Twitter">
+        <a class="social" href="https://x.com/adevnameddell" target="_blank" aria-label="X / Twitter">
           <img src="assets/twitter.png" alt="Twitter icon">
         </a>
-        <a class="social" href="#" aria-label="GitHub">
+        <a class="social" href="https://github.com/ADevNamedDeLL" target="_blank" aria-label="GitHub">
           <img src="assets/github.png" alt="GitHub icon">
         </a>
       </div>
