--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="edu-content">
           <h3>High School Diploma</h3>
           <span class="edu-meta">Graduated 2025</span>
-          <p>Focused on Mathmatics, Physics<, Chemistry, And Social Sciences.</p>
+          <p><strong>3.14 GPA</strong> focused on Mathematics, Physics, Chemistry, and Social Sciences.</p>
         </div>
       </div>
 
